# ChunkNorris

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs
src/strategies/: char_count.rs  mod.rs  sentence_count.rs
tests/: tests.rs
